# Market-Intel

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  run.bat  run.sh
.github/workflows/: ci.yml
backend/: main.py
backend/middleware/: auth.py  body_limit.py  rate_limit.py
backend/routes/: analytics.py  health.py  jobs.py  schedules.py
backend/services/: database.py  engine_stub.py  event_store.py  export.py  job_manager.py  scheduler.py
backend/tests/: conftest.py  test_event_store.py  test_health.py  test_job_manager.py  test_jobs.py  test_scheduler.py  test_sse_stream.py
contracts/: __init__.py  api.py  engine.py  events.py  types.ts
data/: market_intel.db
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FRONTEND.md  PIPELINE.md  PROVIDERS.md  SECURITY.md
engine/: __init__.py  emitter.py  llm.py  mimo.py  pipeline.py
engine/agents/: __init__.py  analyzer.py  reporter.py  scraper.py  verifier.py
engine/tests/: test_analyzer.py  test_concurrency.py  test_llm.py  test_pipeline.py  test_reporter.py  test_scraper.py  test_verifier.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: api.test.ts  sse.test.ts  store.test.ts  utils.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CategoryBreakdown.tsx  ComparisonTable.tsx  ErrorBoundary.tsx  ExportButton.tsx  FindingCard.tsx  Header.tsx  JobCreator.tsx  (+9 more)
integration/: test_adversarial.py  test_contracts.py  test_e2e.py
(+26 files in other folders)
