[project]
name = "market-intelligence-agent"
version = "0.2.0"
description = "Multi-agent system for competitive intelligence — scrape, analyze, verify, report"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "aiosqlite>=0.20.0",
    # Engine
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "instructor>=1.0.0",
    "litellm>=1.30.0",
    "tenacity>=8.2.0",
    # Shared
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]
pdf = [
    "reportlab>=4.0.0",
]
aws = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts", "engine", "backend"]
